# lgm

./: .ocamlformat  Makefile  README.md  dune-project  lgm.opam
examples/: artificial.ml  dune
src/: dune  lgm.ml  lgm.mli
